# mlops-drift

./: .dockerignore  .gitignore  .gitpod.yml  Dockerfile  LICENSE  README.md  TASKS.md  docker-compose.yml  interactive.Dockerfile  pylintrc  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: grafana_datasources.yaml  prometheus.yml
dashboards/: evidently-dashboard.json
docs/: 2023-odsc.html  architecture.excalidraw  notebooks.excalidraw  story.md  todo.md
docs/revealjs/: config.js  highlight-js-github-theme.css  styles.css
docs/revealjs/fonts/: google-fonts.css
docs/revealjs/reveal.js/css/: reveal.scss
notebooks/: 1-train-6-retrain.ipynb  2-5-validate.ipynb  3-drift.ipynb  7-reengineer.ipynb  classifier.tgz  drift.ipynb  exploration.ipynb  train-validate-retrain.ipynb  train.ipynb
scripts/: Dockerfile  README.md
src/insurance_prediction/app/: main.py
src/insurance_prediction/app/application/: dto.py  router.py
src/insurance_prediction/app/infrastructure/: __init__.py
src/insurance_prediction/app/usecase/: insurance.py
src/insurance_prediction/demo/: __init__.py  simulate_drift.py  simulate_drift_curl.py
src/insurance_prediction/model/: __init__.py  insurance.py  rule_based.py
src/insurance_prediction/model/domain/: insurance.py
src/insurance_prediction/monitoring/: __init__.py  data_drift.py
src/insurance_prediction/train/: __init__.py  train.py  validate.py
src/insurance_prediction/train/dataset/: __init__.py  insurance.py
src/insurance_prediction/train/evaluation/: __init__.py
tests/: test_integration.py
(+16 files in other folders)
